Tue Apr 11 13:59:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More detection stuff for sleepycat library: now works on all my
	  machines, but isn't really generic enough yet.

	* SleepyList now has methods to iterate through the list.

Thu Apr  6 00:57:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More sleepycat stuff:
	  o) Generic list implementation now allows items to be added, lists
	     to be written to databases, and lists to be read back from
	     databases.  Doesn't yet allow iteration through lists.
	  o) PostLists can be opened using the list implementation, and sizes
	     returned, but all other functionality not there yet.

	* Modifications to the configure system: now picks up sleepycat stuff
	  on my home machine.

Tue Apr  4 18:49:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Generic list implementation for sleepycat is now almost complete
	  (doesn't yet write lists, but all the other code is there).  Fully
	  untested, obviously.

Tue Apr  4 14:49:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A really hacked network multimatch gets the same results as
	  the multidb1 test in apitest.  Much cleanup needed.

Mon Apr  3 17:55:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed open() method from IRDatabase().  Use constructor to open
	  database instead: this is _much_ cleaner.

Fri Mar 31 19:00:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* First remote mset retrieved.  Still doesn't complete the whole
	  match process, but getting there.

Wed Mar 29 18:01:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Split sleepycat database stuff into separate files, and made it
	  compile on a debian system.  (Needs autoconf detection of sleepycat
	  db.)

Tue Mar 28 18:43:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Lots of documentation comments in database.h
