@@ -202,6 +202,14 @@ class InMemoryDatabase : public IRDatabase {
 	 *                sub-databases will be opened readonly.
 	 */
 	InMemoryDatabase(const DatabaseBuilderParams & params);
+
+	void make_term(const om_termname & tname);
+
+	om_docid make_doc(const om_docname & dname);
+
+	void make_posting(const om_termname & tname,
+			  om_docid did,
+			  om_termpos position);
     public:
 	~InMemoryDatabase();
 
@@ -218,11 +226,7 @@ class InMemoryDatabase : public IRDatabase {
 	LeafTermList * open_term_list(om_docid did) const;
 	LeafDocument * open_document(om_docid did) const;
 
-	void make_term(const om_termname & tname);
-	om_docid make_doc(const om_docname & dname);
-	void make_posting(const om_termname & tname,
-			  om_docid did,
-			  om_termpos position);
+	void add_document(const struct DocumentContents & document);
 };
 
 
